# ResearchBuddy

./: .gitignore  LICENSE  README.md  pyproject.toml
researchbuddy/: __init__.py  __main__.py  cli.py  config.py  evolution.py  sentinel_cli.py
researchbuddy/assets/: researchbuddy.grass
researchbuddy/core/: __init__.py  archive.py  arguer.py  audit.py  autotune.py  capsule.py  causal.py  citation_classifier.py  citation_network.py  core_fetcher.py  embedder.py  fusion.py  graph_backend.py  graph_distance.py  graph_model.py  grobid_client.py  hierarchy.py  ingest.py  llm.py  oa_harvester.py  pdf_processor.py  reasoner.py  review_builder.py  scout.py  searcher.py  sentinel.py  services.py  snowball.py  state_manager.py  visualizer.py  watcher.py
researchbuddy/ui/: __init__.py  server.py
researchbuddy/ui/static/: app.js  index.html  style.css
tests/: conftest.py  test_active_learning.py  test_archive.py  test_audit.py  test_autotune.py  test_capsule.py  test_causal.py  test_citation_network.py  test_core_key.py  test_discovery_engine.py  test_embedder.py  test_fixes_v16.py  test_graph_backend.py  test_graph_distance.py  test_graph_model.py  test_grobid_client.py  test_oa_harvester.py  test_pdf_processor.py  test_ranking_quality.py  test_rating_ingest.py  test_reasoner.py  test_review_builder.py  test_scout.py  test_search_sources.py  test_section_masking.py  test_section_similarity.py  test_sentinel.py  test_sentinel_cli.py  test_services.py  test_snowball.py  test_state_manager.py  test_ui_api.py  test_user_thoughts.py  test_watcher.py  test_year_coercion.py
