[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "researchbuddy"
version         = "0.1.0"
description     = "Graph-based literature search assistant for researchers"
readme          = "README.md"
requires-python = ">=3.9"
license         = {text = "MIT"}
keywords        = ["literature-search", "research", "NLP", "graph", "recommendation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "sentence-transformers>=2.2.0",
    "networkx>=3.0",
    "pdfplumber>=0.9.0",
    "requests>=2.28.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.2.0",
    "rich>=13.0.0",
    "keybert>=0.7.0",
]

[project.scripts]
researchbuddy = "researchbuddy.cli:main"

[project.urls]
Homepage   = "https://github.com/swarag-thota/ResearchBuddy"
Repository = "https://github.com/swarag-thota/ResearchBuddy"
Issues     = "https://github.com/swarag-thota/ResearchBuddy/issues"

[tool.setuptools.packages.find]
where   = ["."]
include = ["researchbuddy*"]
