[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "researchbuddy"
version         = "0.14.0"
description     = "Hierarchical graph-based literature search assistant for researchers"
readme          = "README.md"
requires-python = ">=3.9"
license         = {text = "GPL-3.0-or-later"}
keywords        = ["literature-search", "research", "NLP", "graph", "recommendation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "sentence-transformers>=2.7.0",
    "einops>=0.7.0",
    "networkx>=3.0",
    "pdfplumber>=0.9.0",
    "requests>=2.28.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.2.0",
    "rich>=13.0.0",
    "keybert>=0.7.0",
    "matplotlib>=3.7.0",
    "scipy>=1.9.0",
    # Neo4j driver is now a hard dep — pure Python, ~2 MB, makes the
    # optional Neo4j backend "just work" when the user starts a server.
    "neo4j>=5.0",
]

[project.optional-dependencies]
# Kept for backwards compatibility — installs nothing extra now that the
# driver is a hard dependency.
neo4j = []
test = [
    "pytest>=7.0",
]
# Privacy-preserving graph merge (social-psyche interop): Gromov–Wasserstein
# alignment needs POT. Everything else in the capsule/distance layer is
# pure numpy/scipy/networkx and needs no extra.
social = [
    "pot>=0.9",
]
# Local web UI (researchbuddy-ui): FastAPI + uvicorn, served on 127.0.0.1
# only. Frontend is bundled vanilla JS — no npm, no CDN, fully offline.
ui = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
]
all = [
    "neo4j>=5.0",
    "pot>=0.9",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[project.scripts]
researchbuddy = "researchbuddy.cli:main"
researchbuddy-evolution = "researchbuddy.evolution:main"
researchbuddy-ui = "researchbuddy.ui.server:main"
researchbuddy-sentinel = "researchbuddy.sentinel_cli:main"

[project.urls]
Homepage   = "https://github.com/SwaragThaikkandi/ResearchBuddy"
Repository = "https://github.com/SwaragThaikkandi/ResearchBuddy"
Issues     = "https://github.com/SwaragThaikkandi/ResearchBuddy/issues"

[tool.setuptools.packages.find]
where   = ["."]
include = ["researchbuddy*"]

[tool.setuptools.package-data]
researchbuddy = ["assets/*.grass", "ui/static/*"]
